--- a/resource/less/index.less
+++ b/resource/less/index.less
@@ -55,7 +55,7 @@ input, textarea {
   top: 0;
   height: 42px;
   width: 100%;
-  background-color: rgba(255, 255, 255, 0.46);
+  background-color: rgba(255, 255, 255, 0.12);
   z-index: 100;
   .center {
     width: @width;
@@ -80,8 +80,8 @@ input, textarea {
               width: 58px;
               position: relative;
               z-index: 10;
-              background: url('http://static.hdslb.com/images/base/b-post.png') center center no-repeat;
-              height: 48px;
+              background: url('../images/publish2.png') center no-repeat;
+              height: 51px;
               border-radius: 0 0 5px 5px;
               color: #fff !important;
               font-size: 14px;
@@ -91,7 +91,7 @@ input, textarea {
             }
           }
           a.i-link {
-            color: #222;
+            color: #fff;
             display: block;
             font-size: 13px;
             padding: 0 14px;
@@ -139,8 +139,8 @@ input, textarea {
       position: absolute;
       height: 105px;
       width: 220px;
-      top: 55px;
-      left: 24px;
+      top: 45px;
+      left: -90px;
       background: transparent no-repeat left center
     }
   }
@@ -171,7 +171,7 @@ input, textarea {
             z-index: 10;
             font-size: 14px;
             padding: 0;
-            background: url(@url) -658px -1170px;
+            background: url('../images/index.png') no-repeat;
             em {
               padding-right: 0;
               padding-left: 0;
@@ -233,7 +233,7 @@ input, textarea {
       }
       .search {
         position: absolute;
-        top: -56px;
+        top: 12px;
         right: 0;
         width: 268px;
         height: 32px;
@@ -288,11 +288,11 @@ input, textarea {
           transition: .2s background-color;
           span {
             padding-left: 26px;
-            color: #f25d8e;
+            color: #52c4ed;
             display: inline-block;
             *display: inline;
             *zoom: 1;
-            background: url(@url) -659px -655px no-repeat;
+            background: url('../images/ranking.png') 8px 8px no-repeat;
           }
         }
       }
@@ -476,7 +476,7 @@ input, textarea {
             white-space: nowrap;
             position: relative;
             .b-head-i {
-              background: url(@url) -141px -908px no-repeat;
+              background: url('../images/academic.png');
               width: 40px;
               height: 39px;
               display: inline-block;
