--- a/view/index.jade
+++ b/view/index.jade
@@ -24,11 +24,11 @@ html
                         li.u-i
                             a.i-link 登录
                         li.u-i.post
-                            a.i-link(href='') 上站
-        div.header(style='background-image: url("//i0.hdslb.com/bfs/archive/d018a3742c508cc379472735bf7d124cc7ae9f13.jpg")')
+                            a.i-link(href='') 投稿
+        div.header(style='background-image: url("./images/header.jpg")')
             div.header-layer
             div.header-center
-                a.logo(href='/index', style='background-image: url("//i0.hdslb.com/bfs/archive/ab1c51161404343df6feaed0a18352f7474c2430.png")')
+                a.logo(href='/index', style='background-image: url("./images/logo.png")')
             div.nav
                 div.menu-wrapper
                     ul.nav-menu
